[workspace]
members = [
    "benchbot",
    "client",
    "core",
    "tokenbot",
    "validator",
    "genesis",
    "gossip",
    "keybot",
    "ledgerbot",
    "metricbot",
    "netutil",
    "controllers/bpf",
    "controllers/bvm_loader",
    "controllers/bvm_script",
    "controllers/budget_controller",
    "controllers/profiler",
    "controllers/stake_api",
    "controllers/stake_controller",
    "controllers/storage_api",
    "controllers/storage_controller",
    "controllers/ico_issuer",
    "controllers/vote_api",
    "controllers/vote_controller",
    "storage-miner",
    "runtime",
    "interface",
    "upload-perf",
    "vote-signer",
    "wallet",
    "helper",
]
exclude = ["controllers/bpf/rust/noop"]
