[package]
name = "bincode"
version = "1.1.4"
authors = ["Ty Overby <ty@pre-alpha.com>", "Francesco Mazzoli <f@mazzo.li>", "David Tolnay <dtolnay@gmail.com>", "Daniel Griffen"]
build = "build.rs"
exclude = ["logo.png", "tests/*", "examples/*", ".gitignore", ".travis.yml"]
publish = true
description = "A binary serialization / deserialization strategy that uses Serde for transforming structs into bytes and vice versa!"
documentation = "https://docs.rs/bincode"
readme = "./readme.md"
keywords = ["binary", "encode", "decode", "serialize", "deserialize"]
categories = ["encoding", "network-programming"]
license = "MIT"
repository = "https://github.com/TyOverby/bincode"

[dependencies]
serde = { path = "bitconch-sharder", version = "1.0.0" }

[dependencies.byteorder]
version = "1.3.0"

[dev-dependencies.serde_bytes]
version = "0.11"

[dev-dependencies.serde_derive]
version = "1.0.27"
[build-dependencies.autocfg]
version = "0.1.2"

[features]
i128 = []
[badges.travis-ci]
repository = "TyOverby/bincode"
