[package]
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
edition = "2018"
name = "morgan-genesis"
description = "Blockchain, Rebuilt for Scale"
version = "0.15.3"
repository = "https://github.com/morgan-labs/morgan"
license = "Apache-2.0"
homepage = "https://morgan.com/"

[dependencies]
clap = "2.33.0"
serde_json = "1.0.39"
morgan = { path = "../core", version = "0.15.3"     }
morgan-interface = { path = "../interface", version = "0.15.3"     }
morgan-bvm-script = { path = "../controllers/bvm_script", version = "0.15.3"     }
morgan-budget-controller = { path = "../controllers/budget_controller", version = "0.15.3"     }
morgan-vote-api = { path = "../controllers/vote_api", version = "0.15.3"     }
morgan-vote-controller = { path = "../controllers/vote_controller", version = "0.15.3"     }
morgan-stake-api = { path = "../controllers/stake_api", version = "0.15.3"     }
morgan-stake-controller = { path = "../controllers/stake_controller", version = "0.15.3"     }
morgan-poc-agnt = { path = "../controllers/storage_api", version = "0.15.3"     }
morgan-storage-controller = { path = "../controllers/storage_controller", version = "0.15.3"     }
morgan-ico-issuer = { path = "../controllers/ico_issuer", version = "0.15.3"     }
morgan-profiler = { path = "../controllers/profiler", version = "0.15.3"     }

[dev-dependencies]
hashbrown = "0.3.0"


[features]
cuda = ["morgan/cuda"]
erasure = []
