[package]
name = "bitconch-node-group"
description = "An awesome blockchain with 100k tps"
version = "1.2.0"
documentation = "https://docs.rs/bitconch-core"
homepage = "https://bitconch.io/"
readme = "../README.md"
repository = "https://github.com/bitconch/bitconch-core"
authors = ["Bitconch Core Dev <dev@bitconch.io>"]
license = "Apache-2.0"
edition = "2018"