[package]
name = "morgan-token-controller"
version = "0.15.3"
description = "Morgan token controller"
authors = ["Morgan Maintainers <maintainers@morgan.com>"]
repository = "https://github.com/morgan-labs/morgan"
license = "Apache-2.0"
homepage = "https://morgan.com/"
edition = "2018"

[dependencies]
log = "0.4.2"
morgan-logger = { path = "../../logger", version = "0.15.3"     }
morgan-interface = { path = "../../interface", version = "0.15.3"     }
morgan-ico-issuer = { path = "../ico_issuer", version = "0.15.3"     }

[lib]
name = "bvm_ico_entrypoint"
crate-type = ["lib","cdylib"]
